# omostation-metaos

./: .gitattributes  .gitignore  ACKNOWLEDGMENTS.md  AGENTS.md  ARCHITECTURE.md  BOUNDARY.md  CALLCHAIN.md  CAPABILITY-MAP.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  GOVERNANCE.md  INTERFACE.yaml  LICENSE  MAINTAINERS.md  Makefile  README.md  README.zh.md  RELEASE.md  SECURITY.md  SUPPORT.md  pyproject.toml  pyproject.toml.legacy
.githooks/: pre-commit
.github/workflows/: agent-runtime-core.yml  agentkit-smoke.yml  audit-baseline-monthly.yml  ci.yml
.omo/state/: system.yaml
docs/: ADR-0004-agent-runtime-convergence.md  AGENT-RUNTIME-CONVERGENCE-PLAN.md  AGENT-RUNTIME-USER-FLOW.md  API.md  ARCHITECTURE.md  BEST_PRACTICES.md  CAPABILITY-PROFILES.md  DEVELOPMENT.md  EXAMPLES.md  FAQ.md  MIGRATION.md  README.md  TASK-LIFECYCLE.md  TROUBLESHOOTING.md
scripts/: contract_gatekeeper.py  sync_cognitive_frameworks.py
src/metaos/: __init__.py  agent_cli.py  audit.py  dashboard.py  deadlock_detector.py  l2_controller.py  mcp_server.py  metaos.py  metaos_bus_adapter.py  metaos_main.py  onboard.py  run.py
src/metaos/a2a/: __init__.py  task_manager.py
src/metaos/adapters/: __init__.py  agora.py
src/metaos/cli/: __init__.py  ssot_scan.py
src/metaos/config/: capability-profiles.example.yaml  decision_matrix.json  pricing_config.yaml  task_routes.json
src/metaos/core/: cards_context.py  (+10 more)
tests/: audit_test.py  sample_workflow.yaml  test_admission_gateway.py  test_admission_provider.py  test_agent_runtime_canonical.py  test_agent_runtime_capabilities.py  test_agent_runtime_contracts.py  test_agent_runtime_evidence.py  test_agent_runtime_provider_context.py  test_agent_runtime_target_binding.py  test_cognitive_frame.py  test_cognitive_resolve.py  test_day_ritual.py  test_deadlock_detector.py  test_l2_controller.py  test_mcp_standalone_gate.py  test_phase4_hardening.py  test_provider_versions.py  test_unit.py  test_workflow_bus_publish_e2e.py  test_workflow_engine.py  test_workflow_mvp.py
tests/integration/: test_chaos_workflow.py
tests/scenarios/: test_02_immune.py  test_03_infrastructure.py  test_05_group.py  test_08_cli.py
tools/: audit.sh
tools/metaos-agentkit/: CONVERGENCE.md  README.md  pyproject.toml
tools/metaos-agentkit/src/metaos_agentkit/: __init__.py  capability_runtime.py  claude_hook.py  cli.py  evidence.py  service.py  task_actions.py  task_creation.py  task_store.py  templates.py
tools/metaos-agentkit/tests/: test_capability_runtime.py  test_cli_policy.py  test_evidence.py  test_service.py  test_task_creation.py  test_task_store.py
(+40 files in other folders)
