[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metaos"
version = "1.0.0"
description = "MetaOS — 编排/治理层: 决策门控、免疫监控、路由、数字资产引擎"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Workspace Team" },
]
keywords = ["orchestration", "governance", "decision-gate", "immune", "router"]

dependencies = [
    "fastmcp>=3.4.2",
    "pyyaml>=6.0.3",
    "structlog>=24.0",
    "agora",
    "bus-foundation",
    "requests>=2.34.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
metaos = "metaos.cli:main"
metaos-agent = "metaos.agent_cli:main"

# Agora AdmissionPort SPI (ADR-0181)
[project.entry-points."agora.admission"]
metaos = "metaos.integrations.admission_provider:MetaOSAdmissionProvider"

[tool.hatch.build.targets.wheel]
packages = ["src/metaos"]

[tool.hatch.build.targets.wheel.force-include]
"src/metaos/resources" = "metaos/resources"
"src/metaos/config" = "metaos/config"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.uv.sources]
agora = { path = "../agora", editable = true }
l4-kernel = { path = "../l4-kernel", editable = true }
bus-foundation = { path = "../bus-foundation" }

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "PLE", "RUF100"]
ignore = ["S101", "S603", "S607", "S108", "S110", "S314", "S608", "E402", "E501", "SIM115", "N813", "UP047"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "requests>=2.34.2",
]
